# mesa-geo

./: .codespellignore  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  NOTICE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: asking-help.md  bug-report.md  feature-request.md
.github/workflows/: build_lint.yml  codespell.yml  examples.yml  release.yml
docs/: Makefile  README.md  conf.py  index.md
docs/apis/: api_main.md  geo_base.rst  geoagent.rst  tile_layers.rst  visualization.rst
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/apis/: api_main.doctree  geo_base.doctree  geoagent.doctree  geospace.doctree  raster_layers.doctree  tile_layers.doctree  visualization.doctree
docs/doctrees/examples/: geo_schelling.doctree  geo_schelling_points.doctree  geo_sir.doctree  overview.doctree  population.doctree  rainfall.doctree  urban_growth.doctree
docs/doctrees/tutorials/: intro_tutorial.doctree  overview.doctree
docs/examples/: geo_schelling.md  geo_schelling_points.md  geo_sir.md  population.md  rainfall.md  urban_growth.md
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/mesa_geo/: geo_base.html  geoagent.html  geospace.html  raster_layers.html  tile_layers.html
docs/html/_modules/mesa_geo/visualization/: geojupyter_viz.html  leaflet_viz.html
docs/html/_sources/apis/: raster_layers.rst.txt
docs/html/_sources/examples/: geo_schelling_points.md.txt  geo_sir.md.txt  rainfall.md.txt
docs/html/apis/: api_main.html  geo_base.html  geoagent.html  geospace.html  raster_layers.html  tile_layers.html  visualization.html
docs/html/examples/: geo_schelling.html  geo_schelling_points.html  geo_sir.html  overview.html  population.html  rainfall.html  urban_growth.html
docs/html/lite/api/contents/: all.json
docs/html/lite/edit/: index.html
docs/html/lite/extensions/jupyter-leaflet/static/: 10.687709dd73daf7f1ee34.js.LICENSE.txt  142.512c162b79a8adc53533.js  176.e266803f420c876f2db3.js  330.d51c92cab410ea126836.js  380.adac897760921ac4a5d1.js  630.85f136a8af4b68c7cf19.js
docs/html/lite/extensions/jupyter-vuetify/static/: 261.ccbcebdc2f60023f1d4f.js
docs/html/lite/extensions/jupyter_bridge/: package.json
docs/html/lite/extensions/jupyter_bridge/static/: style_index_js.ed832ec390f23d5124f2.js.map
docs/html/lite/files/: intro_tutorial.ipynb
docs/html/lite/tree/: index.html
docs/html/tutorials/: intro_tutorial.html  overview.html
docs/jupyter_execute/tutorials/: intro_tutorial.ipynb
docs/source/: conf.py  environment.yml
docs/source/_output/: jupyter-lite.json
docs/source/_output/api/contents/: all.json
docs/source/_output/api/contents/data/: all.json
docs/source/_output/consoles/: index.html
docs/source/_output/extensions/jupyter-leaflet/: package.json
docs/source/_output/extensions/jupyter-vuetify/: package.json
docs/source/_output/extensions/jupyter_bridge/: build_log.json  install.json
docs/source/_output/files/: intro_tutorial.ipynb
docs/source/_output/lab/: index.html
docs/source/_output/notebooks/: index.html
docs/source/_output/repl/: index.html
docs/source/_static/: jupyter-lite.json
docs/source/apis/: api_main.md  geo_base.rst  geoagent.rst  geospace.rst  raster_layers.rst  tile_layers.rst  visualization.rst
docs/source/examples/: overview.md
docs/source/tutorials/: intro_tutorial.ipynb  intro_tutorial_colab.ipynb  overview.md
docs/tutorials/: intro_schelling.ipynb  intro_tutorial.ipynb  intro_tutorial.md  overview.md
docs/tutorials/data/: nuts_rg_60M_2013_lvl_2.geojson
examples/: README.md
examples/GeoSIR/: README.md  TorontoNeighbourhoods-original.geojson  TorontoNeighbourhoods.geojson  model.py  run.py  server.py
examples/GeoSchelling/: LeafletMap.js  Map.js  README.md  US_counties.geojson  Untitled.ipynb  model.py  profile.py  server.py  test.geojson  test.py
examples/SimpleToronto/: SiouxFallsCoordinates.geojson  TorontoNeighbourhoods.geojson  model.py  pedromorales.geojson  server.py
examples/geo_schelling/: README.md  model.py  server.py
examples/geo_schelling_points/: README.md  run.py
examples/geo_schelling_points/geo_schelling_points/: agents.py  model.py  server.py  space.py
examples/geo_sir/: README.md  agents.py  model.py  server.py
examples/population/: README.md  run.py
examples/population/population/: model.py  server.py  space.py
examples/rainfall/: README.md  run.py
examples/rainfall/rainfall/: model.py  server.py  space.py
examples/uganda/: README.md  run.py
examples/uganda/uganda/: model.py  server.py  space.py
examples/urban_growth/: README.md  run.py
examples/urban_growth/urban_growth/: model.py  server.py  space.py
mesa_geo/: __init__.py  environment.yml  geo_base.py  geoagent.py  geospace.py  raster_layers.py  shapes.py  tile_layers.py  utilities.py
mesa_geo/geoexperimental/: __init__.py  geojupyter_viz.py  jupyter_viz.py  leaflet_viz.py
mesa_geo/geoexperimental/cell_space/: __init__.py  cell.py  cell_agent.py  cell_collection.py  discrete_space.py  grid.py  network.py
mesa_geo/geoexperimental/components/: matplotlib.py
mesa_geo/visualization/: MapModule.py  ModularVisualization.py  __init__.py  geojupyter_viz.py  geosolara_viz.py  leaflet_viz.py
mesa_geo/visualization/components/: geospace_component.py  geospace_leaflet.py
mesa_geo/visualization/modules/: MapVisualization.py  __init__.py
mesa_geo/visualization/templates/: modular_template.html
mesa_geo/visualization/templates/js/: LeafletMap.js  MapModule.js
tests/: test_AgentCreator.py  test_Examples.py  test_GIS_examples.py  test_GeoJupyterViz.py  test_GeoSolaraViz.py  test_GeoSpace.py  test_ImageLayer.py  test_MapModule.py  test_RasterLayer.py  test_RasterWebTile.py  test_WMSWebTile.py  test_geospace_component.py  test_geospace_leaflet.py
(+31 files in other folders)
