[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "Mesa-Geo"
description = "GIS extension for the Mesa agent-based modeling framework in Python"
readme = "README.md"
license = { text = "Apache 2.0" }
authors = [{name = "Project Mesa-Geo Team"}]
keywords = ["agent-based modeling", "geographic information system", "python", "complex system"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
]
urls = {
    "Homepage" = "https://github.com/projectmesa/mesa-geo",
    "Documentation" = "https://mesa-geo.readthedocs.io/en/main",
    "CI" = "https://github.com/projectmesa/mesa-geo/actions",
    "GitHub Issues" = "https://github.com/projectmesa/mesa-geo/issues",
    "GitHub Repository" = "https://github.com/projectmesa/mesa-geo",
}
dynamic = ["version"]

[project.dependencies]
requires = [
    "mesa~=2.2.0",
    "geopandas",
    "libpysal",
    "rtree",
    "rasterio",
    "shapely",
    "numpy",
    "pyproj",
    "folium",
    "xyzservices>=2022.9.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "pytest",
    "pytest-cov",
    "ruff==0.0.254"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "pydata_sphinx_theme",
    "myst-nb"
]

[project.data-files]
mesa_geo = [
    "visualization/templates/*.html",
    "visualization/templates/css/*",
    "visualization/templates/css/external/*",
    "visualization/templates/js/*",
    "visualization/templates/js/external/*",
    "visualization/templates/external/**/**/*",
]

[tool.ruff]
select = [
    # "ANN", # annotations TODO
    "B", # bugbear
    "C4", # comprehensions
    "DTZ", # naive datetime
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "ISC", # string concatenation
    "N", # naming
    "PGH", # pygrep-hooks
    "PIE", # miscellaneous
    "PLC", # pylint convention
    "PLE", # pylint error
    # "PLR", # pylint refactor TODO
    "PLW", # pylint warning
    "Q", # quotes
    "RUF", # Ruff
    "S", # security
    "SIM", # simplify
    "T10", # debugger
    "UP", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
# Ignore list taken from https://github.com/psf/black/blob/master/.flake8
# E203	Whitespace before ':'
# E266	Too many leading '#' for block comment
# E501	Line too long (82 > 79 characters)
# W503	Line break occurred before a binary operator
# But we don't specify them because ruff's Black already
# checks for it.
# See https://github.com/charliermarsh/ruff/issues/1842#issuecomment-1381210185
extend-ignore = [
    "E501",
    "S101", # Use of `assert` detected
    "B017", # `assertRaises(Exception)` should be considered evil TODO
    "PGH004", # Use specific rule codes when using `noqa` TODO
    "B905", # `zip()` without an explicit `strict=` parameter
    "N802", # Function name should be lowercase
    "N999",  # Invalid module name. We should revisit this in the future, TODO
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar` TODO
    "S310",  # Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.
    "S603",  # `subprocess` call: check for execution of untrusted input
    "ISC001",  # ruff format asks to disable this feature
]
extend-exclude = ["docs", "build"]
# Hardcode to Python 3.9.
target-version = "py39"