[build-system]
requires = [
    "setuptools",
    "wheel",
    "mesa~=2.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "mesa_geo"
version = "1.0"
description = "ABMs Mesa-Geo"
authors = [
    { name="Mesa_Geo", email="coolabms@decisionadvantage.ai" }
]
license = { text="MIT" }
readme = "README.md"

[tool.ruff]
select = [
    # "ANN", # annotations TODO
    "B", # bugbear
    "C4", # comprehensions
    "DTZ", # naive datetime
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "ISC", # string concatenation
    "N", # naming
    "PGH", # pygrep-hooks
    "PIE", # miscellaneous
    "PLC", # pylint convention
    "PLE", # pylint error
    # "PLR", # pylint refactor TODO
    "PLW", # pylint warning
    "Q", # quotes
    "RUF", # Ruff
    "S", # security
    "SIM", # simplify
    "T10", # debugger
    "UP", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
# Ignore list taken from https://github.com/psf/black/blob/master/.flake8
# E203	Whitespace before ':'
# E266	Too many leading '#' for block comment
# E501	Line too long (82 > 79 characters)
# W503	Line break occurred before a binary operator
# But we don't specify them because ruff's Black already
# checks for it.
# See https://github.com/charliermarsh/ruff/issues/1842#issuecomment-1381210185
extend-ignore = [
    "E501",
    "S101", # Use of `assert` detected
    "B017", # `assertRaises(Exception)` should be considered evil TODO
    "PGH004", # Use specific rule codes when using `noqa` TODO
    "B905", # `zip()` without an explicit `strict=` parameter
    "N802", # Function name should be lowercase
    "N999",  # Invalid module name. We should revisit this in the future, TODO
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar` TODO
    "S310",  # Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.
    "S603",  # `subprocess` call: check for execution of untrusted input
    "ISC001",  # ruff format asks to disable this feature
]

#ruff ignores build and docs
extend-exclude = ["docs", "build"]

[project.optional-dependencies]
docs = [
    "myst_parser",
    "jupyterlite-xeus>=0.1.8,<0.2.0",
]


[tool.setuptools.envs.docs]
features = ["docs"]
[tool.setuptools.envs.docs.scripts]
build = "sphinx-build -M html docs/source/ docs/build/"
serve = "python -m http.server --directory docs/build/"



# Hardcode to Python 3.10.
target-version = "py310"