[metadata]
name = Mesa-Geo
url= https://github.com/projectmesa/mesa-geo
project_urls =
    # Docs: RTD = "https://mesa-geo.readthedocs.io/en/latest/"
    CI: GitHub = https://github.com/projectmesa/mesa-geo/actions
    GitHub: issues = https://github.com/projectmesa/mesa-geo/issues
    GitHub: repo = https://github.com/projectmesa/mesa-geo
description = GIS extension for the Mesa agent-based modeling framework in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = agent-based modeling, geographic information system, python, complex system
author = Project Mesa-Geo Team
zip_safe = False
license_file = LICENSE
license = Apache License Version 2.0
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Natural Language :: English

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    mesa
    geopandas
    libpysal
    rtree
    rasterio>=1.3b1
    shapely
    numpy
    pyproj
    folium

[options.package_data]
mesa_geo =
    visualization/templates/*.html
    visualization/templates/css/*
    visualization/templates/css/external/*
    visualization/templates/js/*
    visualization/templates/js/external/*
    visualization/templates/external/**/**/*

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-cov

[options.packages.find]
exclude =
    examples*
    tests*
