[metadata]
name = Mesa-Geo
url= https://github.com/projectmesa/mesa-geo
project_urls =
    Docs: RTD = https://mesa-geo.readthedocs.io/en/main
    CI: GitHub = https://github.com/projectmesa/mesa-geo/actions
    GitHub: issues = https://github.com/projectmesa/mesa-geo/issues
    GitHub: repo = https://github.com/projectmesa/mesa-geo
description = GIS extension for the Mesa agent-based modeling framework in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = agent-based modeling, geographic information system, python, complex system
author = Project Mesa-Geo Team
zip_safe = False
license_files = LICENSE
license = Apache License Version 2.0
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Natural Language :: English

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires =
    mesa~=2.3.0
    geopandas
    libpysal
    rtree
    rasterio
    shapely
    numpy
    pyproj
    folium
    xyzservices>=2022.9.0
    ipyleaflet

[options.package_data]
mesa_geo = *.md,*.ipynb,*.rst

[options.extras_require]
dev =
    black
    coverage
    pytest
    pytest-cov
    ruff==0.0.254
docs =
    sphinx
    sphinx_rtd_theme
    jupyterlite-xeus>=0.2.0a0
    jupyter_bridge



[options.packages.find]
exclude =
    examples*
    tests*
